[tool.poetry]
name = "find-missing-numbers"
version = "0.1.0"
description = ""
authors = ["Batyr Jumageldiyew <jumageldiyewb@list.ru>"]
readme = "README.md"
packages = [{include = "find_missing_numbers"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
